# dialecticus

./: .env.example  .gitignore  README.md  personas.example.yaml  personas.openrouter-free.yaml  personas.self-review.yaml  personas.zen-free.yaml  personas.zen.yaml  personas.zombie-debate.yaml  pyproject.toml
demo-corpus/: z1_eliminativist_null-qualia.md  z2_attributionist_echo-qualia.md  z3_vorstrom-dissociation_report.md  z4_functionalist_no-zombies.md  z5_measurement_lumen-index-critique.md
dialecticus/: __init__.py  cli.py  config.py  context.py  engine.py  events.py  export.py  filetools.py  persona.py  session.py  tui.py
dialecticus/providers/: anthropic_adapter.py  base.py  factory.py  gemini_adapter.py  openai_adapter.py  zai_adapter.py
