[project]
name = "dialecticus"
version = "0.1.0"
description = "Think of it as a stress test for arguments: adversarial load-testing for LLM reasoning with live moderation"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.40",
    "pyyaml>=6.0",
    "textual>=0.60",
    "python-dotenv>=1.0",
]

[project.scripts]
dialecticus = "dialecticus.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dialecticus*"]
